# esp_alarm

./: .build-test-rules.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  pytest.ini  sdkconfig.common  sdkconfig.debug  sdkconfig.defaults  sdkconfig.linux
.github/workflows/: build.yml
components/clock/: CMakeLists.txt  alarm_list.c  clock.c  time_sync.c
components/clock/include/: clock.h
components/clock/test_apps/test_alarm_list/: CMakeLists.txt  sdkconfig.defaults  test_alarm_list.py
components/clock/test_apps/test_alarm_list/main/: CMakeLists.txt  test_alarm_list.c
components/clock/test_apps/test_clock/: CMakeLists.txt
components/clock/test_apps/test_clock/main/: CMakeLists.txt  test_clock.c
components/clock/test_apps/test_sync_time/: CMakeLists.txt
components/clock/test_apps/test_sync_time/main/: CMakeLists.txt  test_clock.c
components/esp32-wifi-manager/: CMakeLists.txt  idf_component.yml
components/esp32-wifi-manager/src/: wifi_manager.c  wifi_manager.h
components/esp_linux_bsp/: CMakeLists.txt  esp_linux_bsp.c  idf_component.yml  lv_drv_conf.h
components/esp_linux_bsp/include/: esp_linux_bsp.h
components/esp_linux_bsp/include/bsp/: esp-bsp.h
components/esp_linux_bsp/lv_drivers/: CMakeLists.txt
components/esp_linux_bsp/lv_drivers/sdl/: sdl.c
components/esp_linux_bsp/test_apps/test_bsp_screen/: CMakeLists.txt
components/esp_linux_bsp/test_apps/test_bsp_screen/main/: CMakeLists.txt  test_bsp_screen.c
components/http_requester/: CMakeLists.txt  http_esp.c  http_linux.c
components/http_requester/include/: http_requester.h
components/screens/: CMakeLists.txt  idf_component.yml  screens.c  seven_segment_125.c  seven_segment_small.c
components/screens/include/: screens.h
components/screens/res/: change_color.sh  cloud.c  heiti_16.c  moon.c  partly_moon.c  partly_rain.c  partly_sun.c  rain.c  snow.c  sun.c  thunder.c  wind.c
components/screens/test_apps/test_images/: CMakeLists.txt
components/screens/test_apps/test_images/main/: CMakeLists.txt  test_images.c
components/screens/test_apps/test_screen/: CMakeLists.txt  sdkconfig.defaults
components/screens/test_apps/test_screen/main/: CMakeLists.txt  test_screen.c
components/todo_list/: CMakeLists.txt  todo_list.c
components/todo_list/include/: todo_list.h
components/todo_list/test_apps/todo_test/: CMakeLists.txt  sdkconfig.defaults
components/todo_list/test_apps/todo_test/main/: CMakeLists.txt  todo_test.c
components/weather/: CMakeLists.txt  openweathermap.c  openweathermap.h  weather.c  weather.h
main/: CMakeLists.txt  Kconfig.projbuild  debug_helpers.c  esp_alarm.c  idf_component.yml
main/include/: debug_helpers.h
resources/: bw.sh
test_apps/test_screen_integration/: CMakeLists.txt
test_apps/test_screen_integration/main/: CMakeLists.txt  test_screen_integration.c
